@@ -20,6 +20,8 @@ to build HTML documentation when installing gems.)
     smart enough to restore the source correctly.  Bug #162 by Zachary Scott.
   * Fixed parsing of executables with shebang and encoding comments.  Bug #161
     by Marcus Stollsteimer
+  * RDoc now ignores methods defined on constants instead of creating a fake
+    module.  Bug #163 by Zachary Scott.
 
 === 4.0.0.preview2.1 / 2012-12-14
 
